Update to the correct GPDR

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
             <div class="articles">
-                <small>*names have been securley encypted to support GDPR</small>
+                <small>*names have been securley encypted to support GPDR</small>
 
                 <h3>Recent Quotes</h3>
                 <br>
