Updated width of images

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                     </blink>
                 </marquee>
 
-                <img src="images/welcome.gif" alt="">
+                <img src="images/welcome.gif" alt="" max-width="100%">
 
                 <p>We support Internet explorer, netscape and the latest WAP protocol!</p>
 
             </center>
             <img src="images/IE.gif" width="100" height="100">
             <img src="images/netscape.gif" width="100" height="100">
-            <img src="images/wap.gif" width="400" height="200">
+            <img src="images/wap.gif" width="400" height="200" max-width="100%">
             
             
             <div class="articles">
