--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <title>A Place To Moan</title>
 
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-2844453827268412",
-            enable_page_level_ads: true
-        });
-    </script>
+<script data-ad-client="ca-pub-2844453827268412" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
     <style>
